--- a/app/index.html
+++ b/app/index.html
@@ -12,44 +12,78 @@
 </head>
 
 <body>
+  <section>
+    <nav>
+      <div class="grid-container">
+        <div class="grid-100">
+          <div class="grid-35">
 
+            <div class="toolbar">
 
+              <a> <img src="src/img/Низкая-копия.png"> </a>
 
-  <nav>
-    <div class="grid-container">
-      <div class="grid-100">
-        <div class="grid-30">
-        <a>  <img src="src/img/Низкая-копия.png"> </a>
-        </div>
-        <li>
-          <a href="#">
-            <div class="countries">
-              1
+              <div class="toolbar__countries">
+
+                <div class="dropdown">
+
+                  <div class="dropbtn"></div>
+
+                  <div class="dropdown-content">
+                    <a href="#">RU</a>
+                    <a href="#">EN</a>
+                  </div>
+                </div>
+              </div>
             </div>
-          </a>
-        </li>
+          </div>
 
-        <div class="grid-30">
+          <div class="grid-25">
+            <div class="phone">
+              <div class="phone__images"> <a> <img src="src/img/phone-128.png"> </a> </div>
+              <div class="phone__text">
+                <span class="phone__number">
+                  +7 (495) 505 63 45
+                </span>
+                <span class="free_calls">
+                  Все звонки бесплатно!
+                </span>
+              </div>
+            </div>
+          </div>
 
+          <div class="grid-40">
+            <div class="links">
+              <div class="links__chat"> <img src="src/img/Слой_3.png"> </div>
+              <a class="links__online_chat">
+                Онлайн чат
+              </a>
+              <a class="links__advantages">
+                Приемущества
+              </a>
+              <a class="links__support">
+                Поддержка
+              </a>
+              <a class="links__entrance">
+                Вход
+              </a>
+            </div>
+          </div>
         </div>
-
-        <div class="grid-30">
-
-        </div>
-
       </div>
-    </div>
-  </nav>
+    </nav>
+  </section>
 
 
 
 
 
+  <section>
+    <div class="fon_nav"> <img src="src/img/bakgraund_fon.png"> </div>
 
 
 
 
-
+  </section>
 
 
 
