--- a/app/index.html
+++ b/app/index.html
@@ -12,85 +12,314 @@
 </head>
 
 <body>
-  <section>
-    <nav>
-      <div class="grid-container">
-        <div class="grid-100">
-          <div class="grid-35">
+  <nav>
+    <div class="grid-container">
+      <div class="grid-100">
+        <div class="grid-35">
 
-            <div class="toolbar">
+          <div class="toolbar">
 
-              <a> <img src="src/img/Низкая-копия.png"> </a>
+            <a> <img src="src/img/Низкая-копия.png"> </a>
 
-              <div class="toolbar__countries">
+            <div class="toolbar__countries">
 
-                <div class="dropdown">
+              <div class="dropdown">
 
-                  <div class="dropbtn"></div>
+                <div class="dropbtn"></div>
 
-                  <div class="dropdown-content">
-                    <a href="#">RU</a>
-                    <a href="#">EN</a>
-                  </div>
+                <div class="dropdown-content">
+                  <a href="#">RU</a>
+                  <a href="#">EN</a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="grid-25">
-            <div class="phone">
-              <div class="phone__images"> <a> <img src="src/img/phone-128.png"> </a> </div>
-              <div class="phone__text">
-                <span class="phone__number">
-                  +7 (495) 505 63 45
-                </span>
-                <span class="free_calls">
-                  Все звонки бесплатно!
-                </span>
-              </div>
-            </div>
-          </div>
-
-          <div class="grid-40">
-            <div class="links">
-              <div class="links__chat"> <img src="src/img/Слой_3.png"> </div>
-              <a class="links__online_chat">
-                Онлайн чат
-              </a>
-              <a class="links__advantages">
-                Приемущества
-              </a>
-              <a class="links__support">
-                Поддержка
-              </a>
-              <a class="links__entrance">
-                Вход
-              </a>
+        <div class="grid-25">
+          <div class="phone">
+            <div class="phone__images"> <a> <img src="src/img/phone-128.png"> </a> </div>
+            <div class="phone__text">
+              <span class="phone__number">
+                +7 (495) 505 63 45
+              </span>
+              <span class="free_calls">
+                Все звонки бесплатно!
+              </span>
             </div>
           </div>
         </div>
+
+        <div class="grid-40">
+          <div class="links">
+            <div class="links__chat"> <img src="src/img/Слой_3.png"> </div>
+            <a class="links__online_chat">
+              Онлайн чат
+            </a>
+            <a class="links__advantages">
+              Приемущества
+            </a>
+            <a class="links__support">
+              Поддержка
+            </a>
+            <a class="links__entrance">
+              Вход
+            </a>
+          </div>
+        </div>
       </div>
-    </nav>
+    </div>
+  </nav>
+
+
+
+
+
+
+  <section class="soft_bar">
+    <div class="grid-container">
+      <div class="grid-100">
+
+
+        <div class="grid-70">
+          <div class="unlimited">
+
+
+            <span class="unlimited__hosting">
+              Очень быстрый
+            </span>
+
+            <span class="unlimited__hosting_one">
+              БЕЗЛИМИТНЫЙ
+            </span>
+
+            <span class="unlimited__hosting_two">
+              хостинг
+            </span>
+
+            <span class="unlimited__hosting_three">
+              Успех вашего сайта наша основная задача!
+            </span>
+
+            <div class="grid-100">
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/music.png"> </a>
+                <a>
+                  <span class="unlimited__services unlimited__services--top">
+                    Безлимитный
+                  </span>
+                  <span class="unlimited__services unlimited__services--bottom">
+                    Жеский диск
+                  </span>
+                </a>
+              </div>
+
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/mesages.png"> </a>
+                <a>
+                  <span>
+                    Безлимитные
+                  </span>
+                  <span>
+                    Почтовые ящики
+                  </span>
+                </a>
+              </div>
+
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/sd_rw.png"> </a>
+                <a>
+                  <span>
+                    Безлимитные
+                  </span>
+                  <span>
+                    FTP акаунты
+                  </span>
+                </a>
+              </div>
+            </div>
+
+
+
+
+            <div class="grid-100">
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/music.png"> </a>
+                <a>
+                  <span>
+                    Безлимитный
+                  </span>
+                  <span>
+                    Трафик
+                  </span>
+                </a>
+              </div>
+
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/Application.png"> </a>
+                <a>
+                  <span>
+                    Безлимитное
+                  </span>
+                  <span>
+                    Количество сайтов
+                  </span>
+                </a>
+              </div>
+
+              <div class="grid-30">
+                <a class="unlimited__services"> <img src="src/img/www.png"> </a>
+                <a>
+                  <span>
+                    Домен
+                  </span>
+                  <span>
+                    В ПОДАРОК
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid-30">
+          <div class="order">
+            <span class="order__start">
+              Начиная с
+            </span>
+
+            <span class="order__start">
+              Р
+            </span>
+
+            <span class="order__start">
+              99
+            </span>
+
+            <span class="order__start">
+              /мес.
+            </span>
+
+
+            <div class="order__button">
+
+
+            </div>
+
+
+
+
+
+            <div class="order__button--bottom">
+
+
+            </div>
+
+
+
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
   </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <section class="capabilities">
+    <div class="grid-container">
+      <div class="grid-35">
+        <div class="capabilities__sites"> <img src="src/img/Слой_56.png">
+          <a class="capabilities__sites capabilities__sites--text">
+            Переносим сайты
+          </a>
+
+
+
+          <a>
+
+          </a>
+
+
+
+        </div>
+      </div>
+      <div class="grid-35">
+        <div class="capabilities__koshelek"> <img src="src/img/koshelek.png">
+          <a class="capabilities__koshelek capabilities__koshelek--text">
+            Гарантия возврата денег
+          </a>
+        </div>
+      </div>
+
+
+      <div class="grid-30">
+        <div class="capabilities__test"> <img src="src/img/Слой_61.png">
+          <a class="capabilities__test capabilities__test--text">
+            Тест хостинга 7 дней
+          </a>
+
+
+
+          <a>
+
+          </a>
+
+
+
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
 
 
   <section>
-    <div class="fon_nav"> <img src="src/img/bakgraund_fon.png"> </div>
+    <div class="grid-container">
+      <div class="grid-100">
 
+        <div class="rate">
+          <h1 class="rate__heading">
+            Тарифы виртуального хостинга от
+          </h1>
 
+          <span class="rate__sherlock_one">
+            SHERLOCKHOST
+          </span>
 
+          <div class="grid-50">
+            <a class="rate__logo"> <img src="src/img/250px-NewTux.svg.png">
 
+              <a class="rate__logo rate__logo--text"> Linux хостинг </a>
+            </a>
+          </div>
+          <div class="grid-50">
+            <a class="rate__logo_one"> <img src="src/img/Microsoft_windows.png"> </a>
+
+            <a class="rate__logo rate__logo_one--text_right"> Windows хостинг </a>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-
-
-
-
-
-
-
 
 
 
