--- a/app/index.html
+++ b/app/index.html
@@ -302,8 +302,6 @@
           <h1 class="OStariffs__headline">
             Тарифы виртуального хостинга от <span class="OStariffs__sherlock_one">SHERLOCKHOST</span>
           </h1>
-
-
           <div class="grid-100">
             <div class="grid-50">
               <a class="OStariffs__link OStariffs__link--linux" href="#">
@@ -311,8 +309,6 @@
                 <span class="OStariffs__text"> Linux хостинг </span>
               </a>
             </div>
-
-
             <div class="grid-50">
               <a class="OStariffs__link OStariffs__link--windows" href="#">
                 <img class="OStariffs__icon" src="src/img/Microsoft_windows.png">
@@ -321,117 +317,295 @@
             </div>
           </div>
         </div>
+
         <div class=" offers">
           <div class="grid-100">
-
             <div class="grid-33">
               <div class="offer__aside">
                 <div class="offer">
                   <span class="offer__header">
                     СТАРТ
                   </span>
-  
                   <span class="offer__body">
                     Краткий текст описания продукта в 2 строки
                   </span>
-  
                   <div class="offer__price">
-
                     <span class="offer__price offer__price--ruble">₽</span>
                     <span class="offer__price offer__price--quantity">99</span>
                     <span class="offer__price offer__price--month">/мес</span>
-  
                   </div>
-  
                   <ul class="offer__list-info">
                     <li class="offer__block-info">
                       <span class="offer__functions"> Сайтов на акаунте </span>
                       <span class="offer__ftraffic-figure"> 1 </span>
                       <br>
                     </li>
-  
-
-
                     <li class="offer__block-info">
                       <span class="offer__functions"> База данных </span>
                       <span class="offer__ftraffic-figure"> 1 </span>
                       <br>
                     </li>
-  
                     <li class="offer__block-info">
                       <span class="offer__functions"> Жеский диск </span>
                       <span class="offer__ftraffic"> Безлимитно </span>
                       <br>
                     </li>
-  
                     <li class="offer__block-info">
                       <span class="offer__functions"> Трафик </span>
                       <span class="offer__ftraffic"> Безлимитно </span>
                       <br>
                     </li>
-  
                     <li class="offer__block-info">
                       <span class="offer__functions"> Домен </span>
                       <span class="offer__ftraffic"> Да </span>
                       <br>
                     </li>
-  
                     <li class="offer__block-info">
                       <span class="offer__functions"> SSH </span>
                       <br>
                     </li>
                   </ul>
-  
-  
                   <a class="offer__buy-button" href="#">
-  
                     <div class="offer__buy-text"> Заказать хостинг Старт </div>
-  
                   </a>
-  
-  
-  
-  
                   <span class="offer__ili">или</span>
-  
                   <span class="offer__text-block"> Протестировать бесплатно 7 дней</span>
-  
-  
-  
                   <div class="images_sherlosk"> <img src="src/img/imgonline-com.png"> </div>
-  
                 </div>
               </div>
             </div>
 
             <div class="grid-33">
-              <div class="offers__centr">
+              <div class="offer__aside">
+                <div class="offer__centr">
+                  <span class="offer__header offer__header--pro">
+                    ПРО
+                  </span>
+                  <span class="offer__body">
+                    Краткий текст описания продукта в 2 строки
+                  </span>
+                  <div class="offer__price offer__price--centr">
+                    <span class="offer__price offer__price--ruble">₽</span>
+                    <span class="offer__price offer__price--quantity">199</span>
+                    <span class="offer__price offer__price--month">/мес</span>
+                  </div>
+                  <ul class="offer__list-info">
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Сайтов на акаунте </span>
+                      <span class="offer__ftraffic-figure"> 10 </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> База данных </span>
+                      <span class="offer__ftraffic-figure"> 10 </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Жеский диск </span>
+                      <span class="offer__ftraffic"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Трафик </span>
+                      <span class="offer__ftraffic"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Домен </span>
+                      <span class="offer__ftraffic"> Да </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> SSH </span>
+                      <br>
+                    </li>
+                  </ul>
+                  <a class="offer__buy-button offer__buy-button--centr" href="#">
+                    <div class="offer__buy-text offer__buy-text--centr"> Заказать хостинг ПРО </div>
+                  </a>
+                  <span class="offer__ili">или</span>
+                  <span class="offer__text-block"> Протестировать бесплатно 7 дней</span>
+                </div>
               </div>
             </div>
 
             <div class="grid-33">
-              <div class="offers__aside">
-
-                <span class="offers__header offers__header--max">
-                  МАКСИМУМ
-                </span>
-
-                <span class="offers__body">
-                  Краткий текст описания продукта в 2 строки
-                </span>
+              <div class="offer__aside">
+                <div class="offer">
+                  <span class="offer__header offer__header--right">
+                    МАКСИМУМ
+                  </span>
+                  <span class="offer__body">
+                    Краткий текст описания продукта в 2 строки
+                  </span>
+                  <div class="offer__price offer__price--right">
+                    <span class="offer__price offer__price--ruble">₽</span>
+                    <span class="offer__price offer__price--quantity">299</span>
+                    <span class="offer__price offer__price--month">/мес</span>
+                  </div>
+                  <ul class="offer__list-info">
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> RAM </span>
+                      <span class="offer__ftraffic-figure"> 1 GB</span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Сайтов на аккаунте </span>
+                      <span class="offer__ftraffic-figure"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Баз данных </span>
+                      <span class="offer__ftraffic"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Жеский диск </span>
+                      <span class="offer__ftraffic"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Трафик </span>
+                      <span class="offer__ftraffic"> Безлимитно </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> Домен в подарок </span>
+                      <span class="offer__ftraffic"> Да </span>
+                      <br>
+                    </li>
+                    <li class="offer__block-info">
+                      <span class="offer__functions"> SSH </span>
+                      <br>
+                    </li>
+                  </ul>
+                  <a class="offer__buy-button offer__buy-button--right" href="#">
+                    <div class="offer__buy-text offer__buy-text--right"> Заказать хостинг Максимум </div>
+                  </a>
+                  <span class="offer__ili">или</span>
+                  <span class="offer__text-block"> Протестировать бесплатно 7 дней</span>
+                </div>
               </div>
             </div>
+          </div>
+
+          <div class="offers__social">
+
+            <a href="#" class="offers__social-link">
+              <div class="offers__social-circle offers__social-circle--vk">
+                <img class="offers__social-icon" src="src/img/social__icon--vk.svg">
+              </div>
+            </a>
+
+            <a href="#" class="offers__social-link">
+              <div class="offers__social-circle offers__social-circle--fb">
+                <img class="offers__social-icon" src="src/img/social__icon--fb.svg">
+              </div>
+            </a>
+
+            <a href="#" class="offers__social-link">
+              <div class="offers__social-circle offers__social-circle--ok">
+                <img class="offers__social-icon" src="src/img/social__icon--ok.svg">
+              </div>
+            </a>
+
+            <a href="#" class="offers__social-link">
+              <div class="offers__social-circle offers__social-circle--tw">
+                <img class="offers__social-icon" src="src/img/social__icon--tw.svg">
+              </div>
+            </a>
+
+            <a href="#" class="offers__social-link">
+              <div class="offers__social-circle offers__social-circle--pencil">
+                <img class="offers__social-icon" src="src/img/pencil.svg">
+              </div>
+            </a>
 
           </div>
+
         </div>
       </div>
-
     </div>
   </section>
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <section>
+
+    <div class="grid-container">
+      <h3>
+        Поддержка всех популярных СМС платформ
+      </h3>
+      <div class="grid-100">
+        <div class="grid-25">
+
+          <a href="#" class="">
+              <img class="" src="src/img/social__icon--vk.svg">
+          </a>
+
+        </div>
+        <div class="grid-25">
+
+          <a href="#" class="">
+            <img class="" src="src/img/social__icon--vk.svg">
+        </a>
+
+        </div>
+        <div class="grid-25">
+
+          <a href="#" class="">
+            <img class="" src="src/img/social__icon--vk.svg">
+        </a>
+
+        </div>
+        <div class="grid-25">
+
+          <a href="#" class="">
+            <img class="" src="src/img/social__icon--vk.svg">
+        </a>
+
+        </div>
+      </div>
+
+
+
+      <div class="grid-100">
+        <div class="grid-25">
+
+        </div>
+        <div class="grid-25">
+
+        </div>
+        <div class="grid-25">
+
+        </div>
+        <div class="grid-25">
+
+        </div>
+      </div>
+
+
+
+
+
+
+
+  </section>
 
 
 
