--- a/app/index.html
+++ b/app/index.html
@@ -71,11 +71,6 @@
     </div>
   </nav>
 
-
-
-
-
-
   <section class="soft_bar">
     <div class="grid-container">
       <div class="grid-100">
@@ -229,21 +224,6 @@
     </div>
   </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <section class="capabilities">
     <div class="grid-container">
       <div class="grid-35">
@@ -289,11 +269,6 @@
       </div>
     </div>
   </section>
-
-
-
-
-
 
   <section class="virtual_hosting">
     <div class="grid-container">
@@ -528,78 +503,88 @@
     </div>
   </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <section>
+  <section class="optimized-platform">
 
     <div class="grid-container">
-      <h3>
-        Поддержка всех популярных СМС платформ
-      </h3>
-      <div class="grid-100">
-        <div class="grid-25">
 
+      <div class="row">
+        <h3>
+          Поддержка всех популярных СМС платформ
+        </h3>
+      </div>
+      <div class="grid-100">
+
+        <div class="grid-25">
           <a href="#" class="">
-              <img class="" src="src/img/social__icon--vk.svg">
+            <img class="optimized-platform__modx" src="src/img/Background.png">
           </a>
-
         </div>
+
         <div class="grid-25">
-
           <a href="#" class="">
-            <img class="" src="src/img/social__icon--vk.svg">
-        </a>
-
+            <img class="optimized-platform__bitrix" src="src/img/bictrisc.png">
+          </a>
         </div>
+
         <div class="grid-25">
-
           <a href="#" class="">
-            <img class="" src="src/img/social__icon--vk.svg">
-        </a>
-
+            <img class="optimized-platform__presta" src="src/img/presta-shop.png">
+          </a>
         </div>
+
         <div class="grid-25">
-
           <a href="#" class="">
-            <img class="" src="src/img/social__icon--vk.svg">
-        </a>
-
+            <img class="optimized-platform__dle" src="src/img/DataLife_Engine_logo.png">
+          </a>
         </div>
       </div>
+
+
+
 
 
 
       <div class="grid-100">
-        <div class="grid-25">
-
+        <div class="grid-20">
+          <a href="#" class="">
+            <img class="optimized-platform__umicms" src="src/img/slou55.png">
+          </a>
         </div>
-        <div class="grid-25">
 
+        <div class="grid-20">
+          <a href="#" class="">
+            <img class="optimized-platform__openkart" src="src/img/slou66.png">
+          </a>
         </div>
-        <div class="grid-25">
 
+        <div class="grid-15">
+          <a href="#" class="">
+            <img class="optimized-platform__netcat" src="src/img/Background123.png">
+          </a>
         </div>
-        <div class="grid-25">
 
+        <div class="grid-15">
+          <a href="#" class="">
+            <img class="optimized-platform__drupal" src="src/img/drupal.png">
+          </a>
+        </div>
+
+        <div class="grid-15">
+          <a href="#" class="">
+            <img class="optimized-platform__joomla" src="src/img/joomla.png">
+          </a>
+        </div>
+
+        <div class="grid-15">
+          <a href="#" class="">
+            <img class="optimized-platform__wordpress" src="src/img/wordPress.png">
+          </a>
         </div>
       </div>
 
-
+      <a href="#" class="row__bottom">
+        Показать всё
+      </a>
 
 
 
@@ -607,6 +592,332 @@
 
   </section>
 
+  <section class="advantage">
+    <div class="grid-container">
+      <h4>
+        Приемущества SHERLOCKHOST
+      </h4>
+      <div class="grid-100">
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/clic.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Приложение в 1 клик
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                Автоустановка приложений в 1 клик <br>
+                Wordpress, joomla, drupal
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/web-page.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Бесплатный перенос
+              </span>
+              <span class="advantage__name advantage__name--bottom">
+                Бесплатный перенос с других <br>
+                хостингов
+              </span>
+
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/harddisk.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Большой объем памяти
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                до 1гб памяти на тариф
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/www.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Домен в подарок
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                Ко всем тарифам
+              </span>
+            </div>
+          </a>
+        </div>
+
+      </div>
+
+
+
+
+
+      <div class="grid-100">
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/protection.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                DDOS защита
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                Описание этого сервиса <br>
+                в 2 строки
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/colums.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Безлимитный ЖД и трафик
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                Описание этого сервиса <br>
+                в 2 строки
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/email_mail_online_web-512.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Почтовые ящики
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                Безлемитные почтовые ящики <br>
+                +фвтоответчик+почтовый <br>
+                интерфейс
+              </span>
+            </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+              <img class="advantage__functions-img" src="src/img/ip.png">
+            </div>
+            <div>
+              <span class="advantage__name">
+                Выделенный IP
+              </span>
+
+              <span class="advantage__name advantage__name--bottom">
+                (опционально)
+              </span>
+            </div>
+          </a>
+        </div>
+
+
+
+      </div>
+
+
+
+
+
+      <div class="grid-100">
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/cloud.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Cloundlinux
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Облаковая технология
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="functions-img" src="src/img/Copy.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Резервное копирование
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              бесплатно
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/grafic.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              SSH
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Безлемитные почтовые ящики <br>
+              доступ
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/php.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Сервер сайд - PHP
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Описание этого сервиса <br>
+              в 2 строки
+            </span>
+          </div>
+          </a>
+        </div>
+
+      </div>
+
+
+
+
+
+      <div class="grid-100">
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/diamond.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Ruby
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Описание этого сервиса <br>
+              в 2 строки
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/dolphin.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Mysql
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Описание этого сервиса <br>
+              в 2 строки
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+            <div class="advantage__img-container">
+            <img class="advantage__functions-img" src="src/img/handshake.png">
+          </div>
+          <div>
+            <span class="advantage__name">
+              Сервер сайд - PHP
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Описание этого сервиса <br>
+              в 2 строки
+            </span>
+          </div>
+          </a>
+        </div>
+
+        <div class="grid-25">
+          <a href="#" class="advantage__link">
+
+            <button class="">
+              Партнерская программа
+            </button>
+
+            <span class="advantage__name">
+              или
+            </span>
+
+            <span class="advantage__name advantage__name--bottom">
+              Попробовать 7 дней бесплатно
+            </span>
+          </a>
+        </div>
+
+
+
+
+
+
+
+      </div>
+    </div>
+    </div>
+  </section>
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
