--- a/app/index.html
+++ b/app/index.html
@@ -771,7 +771,7 @@
                 </span>
 
                 <span class="advantage__name advantage__name--bottom">
-                  Безлемитные почтовые ящики <br>
+
                   доступ
                 </span>
               </div>
@@ -886,75 +886,145 @@
     </div>
   </section>
 
-<section class="new-level">
-  <div class="grid-container">
-    <h4>
-      Новый уровень хостина для вашего вебсайта!
-    </h4>
-    <div class="grid-100">
-      <div class="grid-30">
-        <div>
-          <a class="features__services"> <img src="src/img/images1.png"> </a>
-          <span class="features__top">
+  <section class="new-level">
+    <div class="grid-container">
+      <span class="hosting-header">
+        <h4>
+          Новый уровень хостина для вашего вебсайта!
+        </h4>
+      </span>
+      <div class="grid-70 prefix-20">
+        <div class="grid-30">
+          <div>
+            <a class="__services"> <img src="src/img/images1.png"> </a>
+            <span class="features__top features__top--hosting">
+              Безлимитный
+            </span>
+            <span class="features__bottom features__bottom--hosting-bottom">
+              Жеский диск
+            </span>
+            </a>
+          </div>
+        </div>
+
+
+        <div class="grid-30">
+          <a class="unlimited__services"> <img src="src/img/images4.png"> </a>
+          <span class="features__top features__top--hosting">
             Безлимитный
           </span>
-          <span class="features__bottom">
-            Жеский диск
+          <span class="features__bottom features__bottom--hosting-bottom">
+            Трафик
+          </span>
+          </a>
+        </div>
+
+
+        <div class="grid-30">
+          <a class="unlimited__services"> <img src="src/img/images5.png"> </a>
+          <span class="features__top features__top--hosting">
+            Безлимитное
+          </span>
+          <br>
+          <span class="features__bottom features__bottom--hosting-bottom">
+            Количество сайтов
           </span>
           </a>
         </div>
       </div>
+      <div class="grid-100">
+        <div class="grid-33 prefix-15">
 
+          <a class="new-level__button-left">
+            Начать сейчас за
+            <span class="new-level__r"> ₽ </span>
+            <span class="new-level__99"> 99 </span>
+            /мес
+          </a>
 
-      <div class="grid-30">
-        <a class="unlimited__services"> <img src="src/img/images4.png"> </a>
-        <span class="features__top">
-          Безлимитный
-        </span>
-        <span class="features__bottom">
-          Трафик
-        </span>
+        </div>
+        <div class="grid-5">
+          <span>
+
+            или
+          </span>
+
+        </div>
+
+        <div class="grid-45">
+          <a class="new-level__button-centr">
+
+            <span>
+              Протестировать 7 дней
+            </span>
+
+            <span class="new-level__is-free">
+              БЕСПЛАТНО
+            </span>
+
+          </a>
+        </div>
+
+        <a class="new-level__button-right">
+
+          <span>
+            Протестировать 7 дней
+          </span>
+
+          <span class="new-level__is-free">
+            БЕСПЛАТНО
+          </span>
+
         </a>
       </div>
 
-
-      <div class="grid-30">
-        <a class="unlimited__services"> <img src="src/img/images5.png"> </a>
-        <span class="features__top">
-          Безлимитное
-        </span>
-        <span class="features__bottom">
-          Количество сайтов
-        </span>
-        </a>
-      </div>
 
 
     </div>
-  </div>
-</section>
+    </div>
+  </section>
+
+  <section class="warranty">
+    <div class="grid-container">
+      <div class="grid-100">
+        <span class="warranty__heading">
+          <h3>
+            Наши гарантии
+          </h3>
+          <img class="warranty__sharlosk-man" src="src/img/sh_123.png">
+        </span>
+        <div class="grid-33">
+          <a class="warranty__support">
+
+            <img class="" src="src/img/support_man_avatar_human.png">
+
+            <span> Круглосуточная поддержка </span>
+          <span> описание этого сервиса в строку </span> 
+          </a>
+        </div>
+        <div class="grid-33">
+          <a class="warranty__support">
+
+            <img class="" src="src/img/Public_signs-money.png">
+
+            <span> Гарантия возврата денег </span>
+            <span> в течении 30 дней </span>
+          </a>
+        </div>
+        <div class="grid-33">
+          <a class="warranty__support">
+
+            <img class="" src="src/img/shkala.png">
+
+            <span> 99.9 % аптайм </span>
+            <span> бесперебойная работа 24/7 </span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="build/js/index.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function (b, o, i, l, e, r) {
-      b.GoogleAnalyticsObject = l;
-      b[l] || (b[l] =
-        function () {
-          (b[l].q = b[l].q || []).push(arguments)
-        });
-      b[l].l = +new Date;
-      e = o.createElement(i);
-      r = o.getElementsByTagName(i)[0];
-      e.src = 'https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e, r)
-    }(window, document, 'script', 'ga'));
-    ga('create', 'UA-XXXXX-X', 'auto');
-    ga('send', 'pageview');
-  </script>
 </body>
 
 </html>
